cmake_minimum_required(VERSION 4.0.0 FATAL_ERROR)

add_subdirectory(vendors/Phantom-Renderer)

set(GLFW_BUILD_DOCS     false    CACHE BOOL   "Build the GLFW documentation")
set(GLFW_INSTALL        false    CACHE BOOL   "Generate instilation target")
set(GLFW_USE_HYBRID_HPG true     CACHE BOOL   "Force use of high-performance GPU on hybrid systems")
set(GLFW_LIBRARY_TYPE   "STATIC" CACHE STRING "Library type override for GLFW (SHARED, STATIC, OBJECT, or empty to follow BUILD_SHARED_LIBS)")
add_subdirectory(vendors/glfw)

project(SH34-SBX LANGUAGES C)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(C_EXTENSIONS OFF)

file(GLOB_RECURSE SBX_C_SOURCE "source/*.c")
add_executable(SBX ${SBX_C_SOURCE})
target_link_libraries(SBX PUBLIC PR glfw)
target_include_directories(SBX PUBLIC "headers")

if(MSVC)
    target_compile_definitions(SBX PRIVATE _CRT_SECURE_NO_WARNINGS)
endif()
if(GCC)
    target_compile_options(SBX PRIVATE -Wall -Wextra -Wpedantic -Werror -fsanitize=address,undefined)
endif()

if(MSVC)
    set_target_properties(SBX PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_BINARY_DIR}/$<CONFIG>/")
    add_custom_target(deleteResourcesMSVC-SBX ALL COMMAND ${CMAKE_COMMAND} -E remove_directory ${PROJECT_BINARY_DIR}/$<CONFIG>/resources COMMENT "Deleting old resources in binary directory")
    add_custom_target(copyResourcesMSVC-SBX ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources ${PROJECT_BINARY_DIR}/$<CONFIG>/resources COMMENT "Copying resources into binary directory" DEPENDS deleteResourcesMSVC-SBX)
else()
    add_custom_target(deleteResources-SBX ALL COMMAND ${CMAKE_COMMAND} -E remove_directory ${PROJECT_BINARY_DIR}/resources COMMENT "Deleting old resources in binary directory")
    add_custom_target(copyResources-SBX ALL COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources ${PROJECT_BINARY_DIR}/resources COMMENT "Copying resources into binary directory" DEPENDS deleteResources-SBX)
endif()
